Fixing CSS to fit on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+:root {
+    --shadow: -1px 0 black,
+        0 1px black,
+        1px 0 black,
+        0 -1px black;
+    --whiteG: #fafafa92;
+    --bg_img: url("../images/bg4.jpg");
+    --left_img: url('../images/group_fit_style.jpg');
+    --center_img: url('../images/tree_on_a_stone.jpg');
+    --right_img: url('../images/formal_vertical_style.jpg');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -14,7 +26,7 @@ body {
 }
 
 .bg {
-    background-image: url("../images/bg3.jpg");
+    background-image: var(--bg_img);
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -33,9 +45,8 @@ h2 {
 #menu {
     font-size: 150%;
     letter-spacing: 4px;
-    color: #fafafa92;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    line-height: 75px;
+    color: var(--whiteG);
+    text-shadow: var(--shadow);
     margin-top: 60px;
     height: 100px;
 }
@@ -63,38 +74,38 @@ h2 {
     padding-top: 10px;
     text-align: center;
     font-size: 200%;
-    color: #fafafa92;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    margin-top: 100px;
+    height: 150px;
+    color: var(--whiteG);
+    text-shadow: var(--shadow);
+    border: red 1px solid;
 }
 
-/****************  ****************/
+/**************** Home ****************/
 #bonsai_about {
     width: 33.33%;
     margin: 0 auto;
 }
+
+
+/**************** Bonsai Cards ****************/
 
 #bonsai_type {
     box-sizing: border-box;
     width: 100%;
 }
 
-#contact_form_section {
-    height: 450px;
-    width: 33.33%;
-    margin: 0 auto;
-}
-
 #row {
     padding-top: 50px;
     display: flex;
-    width: 100%;
+    width: 98%;
     gap: 10px;
     gap: 10px 20px;
     /* row-gap column gap */
     row-gap: 10px;
     column-gap: 20px;
-
-
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 /* Create three equal columns that sits next to each other */
@@ -102,24 +113,22 @@ h2 {
     flex: 33.33%;
 }
 
-/**************** Bonsai Cards ****************/
-
 #left_card {
-    background: url('../images/group_fit_style.jpg');
+    background: var(--left_img);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 #center_card {
-    background: url('../images/tree_on_a_stone.jpg');
+    background: var(--center_img);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 #right_card {
-    background: url('../images/formal_vertical_style.jpg');
+    background: var(--right_img);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -136,14 +145,14 @@ h2 {
             hsl(20 0% 0% / 0.3) 20%,
             hsl(0 0% 0% / 1));
     min-height: 300px;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: var(--shadow);
 }
 
 .card_title {
     position: relative;
     width: max-content;
-    color: #fafafa92;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    color: var(--whiteG);
+    text-shadow: ;
 }
 
 .card_title::after {
@@ -160,25 +169,33 @@ h2 {
     cursor: pointer;
     display: inline-block;
     text-decoration: none;
-    color: #fafafa92;
+    color: var(--whiteG);
     background-color: #307334;
     padding: 0.5em 1.25em;
     border-radius: 0.25rem;
 }
 
 .card_body {
-    color: #fafafa92;
+    color: var(--whiteG);
 }
 
 /**************** Teste card end ****************/
 
 /**************** Form ****************/
 
+#contact_form_section {
+    margin-top: 100px;
+    height: 450px;
+    width: 33.33%;
+    margin: 0 auto;
+    border: red 1px solid;
+}
+
 .contact_form {
     margin: 10px 10% 0 0;
     color: #fafafa;
     background-color: rgba(60, 60, 60, 0.6);
-    width: 90%;
+    /*width: 90%;*/
     padding: 30px;
 }
 
@@ -228,8 +245,8 @@ textarea {
 /**************** Footer ****************/
 
 footer {
-    height: 150px;
-    margin-top: 30px;
+    height: 100px;
+    margin-top: 170px;
 }
 
 .social_media {
@@ -249,9 +266,28 @@ footer {
 
 /**************** Media queries ****************/
 
-/**************** For smaller screens sizes 400px wide and down ***************
+/**************** For smaller screens sizes 400px wide and down ***************/
 
-@media screen and (max-width: 400px) {}*/
+@media screen and (max-width: 600px) {
+
+    body,
+    html {
+        height: auto;
+    }
+
+    #bonsai_about {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    #contact_form_section {
+        height: 450px;
+        width: 80%;
+        margin: 0 auto;
+    }
+}
+
+
 
 /**************** For medium screens sizes from 600px wide and down ****************/
 @media screen and (max-width: 900px) {
@@ -259,30 +295,27 @@ footer {
     #menu {
         clear: both;
         float: left;
-        margin: 20px;
-        line-height: 25px;
-        border: red 1px solid;
+        margin-top: 20px;
+        margin-left: 10px;
+        letter-spacing: 0;
+        margin-top: 10px;
     }
+
 
     #welcome {
         padding: 30px 0;
         margin: 0;
     }
 
-
-    #menu {
-        margin-top: 100px;
-    }
-
-
     #row {
         flex-wrap: wrap;
         flex-direction: row;
-        padding: 20px;
+        width: 90%;
+        margin: 20px;
     }
 
     .column {
-        flex: 120%;
+        flex: 100%;
     }
 
     .card_content {
@@ -340,7 +373,7 @@ footer {
 
     .card_button:hover,
     .card_button:focus {
-        background-color: #fafafa92;
+        background-color: var(--whiteG);
         color: #252525;
         text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
     }
